--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "lucide-react": "^0.545.0",
-    "next": "15.5.5",
+    "next": "^16.1.0",
     "qrcode": "^1.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
